# chess

./: .gitignore  Cargo.toml  LICENSE  README.md  shared_dependencies.md
chess_game/: castling.py  chess_board.py  chess_game.py  chess_piece.py  chess_player.py  utils.py
chess_game/tests/: test_castling.py
chessboard/: chessboard.rs
src/: bishop.rs  board.rs  castling.rs  chess.rs  chessboard.rs  king.rs  knight.rs  lib.rs  main.rs  pawn.rs  piece.rs  queen.rs  rook.rs  tests.rs
src/chess/: bishop.rs  board.rs  castling.rs  color.rs  game.rs  king.rs  knight.rs  move.rs  pawn.rs  piece.rs  queen.rs  rook.rs  utils.rs
src/chessboard/: board.rs  chessboard.rs  mod.rs
src/game_components/: bishop.rs  chess_piece.rs  chessboard.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/game_flow/: initialize_game.rs  main_game_loop.rs  mod.rs  move_validation.rs  winning_condition.rs
src/game_logic/: mod.rs  move_validation.rs  piece_capturing.rs
src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs
src/player_management/: player.rs
src/tests/: bishop_tests.rs  board_tests.rs  castling_tests.rs  chess_tests.rs  game_tests.rs  king_tests.rs  knight_tests.rs  move_tests.rs  pawn_tests.rs  piece_tests.rs  pieces_tests.rs  queen_tests.rs  rook_tests.rs
src/user_interface/: input_handling.rs  mod.rs  print_chessboard.rs
tests/: board_tests.rs  castling_tests.rs  game_tests.rs  integration_test.rs  move_tests.rs  piece_tests.rs  pieces_tests.rs  test_pieces.rs  test_valid_moves_pieces.rs
tests/chess/: board_test.rs  (+2 more)
(+18 files in other folders)
