[package]
name = "chess_game"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "chess_game"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"

[[test]]
name = "board_tests"
path = "src/tests/board_tests.rs"

[[test]]
name = "pieces_tests"
path = "src/tests/pieces_tests.rs"